--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "pear/http_request2": "^2.3"
+        "pear/http_request2": "^2.3",
+        "pear/net_url2": "^2.2"
     }
 }
